# AgentVault

./: .gitignore  404.html  AgentVaultPhase1AdditionsV1  AgentVaultPhase1SecurityAdditionsV1  AgentVaultRequiremntsV6FINAL.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCY_LICENSES.md  LICENSE  PRIVACY_POLICY.md  README.md  REGISTRY_POLICY.md  ROADMAP.md  SECURITY.md  TERMS_OF_SERVICE.md  WorfklowA2AV2.md  WorkflowA2A.md  create_dev.py  index.html  initial-card.json  localhelperLLMeval.md  mkdocs.yml  poetry.toml  pyproject.toml  pytest.ini  sitemap.xml  submit_card.py  test_run_directly.py
.github/workflows/: dependency_audit.yml  docs_deploy.yml  run_tests.yml
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
REGISTRY_POLICY/: index.html
ROADMAP/: index.html
Scripts/: compile_project_to_text.py  copy_into_txt.py  extract_and_write_files.py
TERMS_OF_SERVICE/: index.html
a2a_profile_v0.2/: index.html
agentvault_cli/: .gitignore  LICENSE  README.md  pyproject.toml
agentvault_cli/commands/: run.py
agentvault_cli/src/agentvault_cli/: __init__.py  main.py  utils.py
agentvault_cli/src/agentvault_cli/commands/: __init__.py  config.py  discover.py  run.py
agentvault_cli/tests/: __init__.py  conftest.py
agentvault_cli/tests/cli/: __init__.py  test_config_commands.py  test_discover_command.py  test_run_command.py  test_utils.py
agentvault_library/: .gitignore  README.md  pyproject.toml
agentvault_library/src/agentvault/: __init__.py  agent_card_utils.py  client.py  exceptions.py  key_manager.py  mcp_utils.py
agentvault_library/src/agentvault/models/: __init__.py  a2a_protocol.py  agent_card.py
agentvault_library/src/agentvault/protocols/: __init__.py
agentvault_library/tests/: __init__.py  conftest.py
agentvault_registry/: .env.example  .gitignore  Dockerfile  Procfile  README.md  alembic.ini  pyproject.toml  pytest.ini
agentvault_registry/alembic/: env.py
agentvault_registry/alembic/versions/: 495a40fce45f_change_agent_card_data_to_jsonb.py  a9d876df1fdf_initial_schema_for_developers_and_agent_.py  e163cd45ddf7_add_is_verified_to_developer_table.py  ed219e8077fc_add_gin_index_on_agent_card_tags.py  f001_auth_models.py  xxxx_new_auth_models.py
agentvault_registry/src/agentvault_registry/: __init__.py  config.py  database.py  email_utils.py  main.py  models.py  schemas.py  security.py
agentvault_registry/src/agentvault_registry/agent_templates/adk_agent/: agent-card.json.j2  agent.py.j2  main.py.j2  requirements.txt.j2  tools.py.j2
agentvault_registry/src/agentvault_registry/agent_templates/common/: .env.example.j2  Dockerfile.j2  INSTRUCTIONS.md.j2
agentvault_registry/src/agentvault_registry/agent_templates/simple_wrapper/: agent-card.json.j2  agent.py.j2  main.py.j2
agentvault_registry/src/agentvault_registry/crud/: __init__.py  agent_card.py  developer.py
agentvault_registry/src/agentvault_registry/routers/: agent_builder.py  agent_cards.py  auth.py  developers.py  utils.py
agentvault_registry/src/agentvault_registry/static/: forgot-password.html  index.html  login.html  login.js  recover-with-key.html  recover-with-key.js  register.html  register.js  reset-failed.html  reset-requested.html  reset-success.html  script.js  set-new-password.html  set-new-password.js  style.css  verify-failed.html  verify-success.html
agentvault_registry/src/agentvault_registry/static/developer/: developer.css  developer.js  index.html
agentvault_registry/src/agentvault_registry/templates/email/: password_reset.html  verification.html
agentvault_registry/tests/: __init__.py  conftest.py
agentvault_registry/tests/registry_api/: conftest.py  test_agent_builder_api.py  test_agent_cards_api.py  test_auth_api.py  test_crud_agent_card.py  test_crud_developer.py  test_developers_api.py  test_email_utils.py  test_main_routes.py  test_security.py  test_security_deps.py  test_utils_api.py
agentvault_server_sdk/: .gitignore  README.md  pyproject.toml
agentvault_server_sdk/src/: __init__.py
agentvault_server_sdk/src/agentvault_server_sdk/: __init__.py  agent.py  exceptions.py  fastapi_integration.py  mcp_utils.py  state.py
agentvault_server_sdk/src/agentvault_server_sdk/packager/: __init__.py  cli.py
agentvault_server_sdk/tests/: __init__.py  conftest.py  test_agent.py  test_fastapi_integration.py  test_import.py  test_mcp_utils.py  test_packager_cli.py  test_state.py
agentvault_testing_utils/: .gitignore  LICENSE  README.md  pyproject.toml
agentvault_testing_utils/src/agentvault_testing_utils/: __init__.py  agents.py  assertions.py  factories.py  fixtures.py  mock_server.py  mocks.py
agentvault_testing_utils/tests/: __init__.py  test_agents.py  test_assertions.py  test_factories.py  test_mock_server.py  test_mocks.py
architecture/: index.html
automation_scripts/: .gitignore  README.md  __init__.py  create_package_agent.py  deploy_register_agent.py  find_run_task.py
automation_scripts/tests/: test_create_package_agent.py  test_find_run_task.py
concepts/: index.html
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  REGISTRY_POLICY.md  ROADMAP.md  TERMS_OF_SERVICE.md  a2a_profile_v0.2.md  architecture.md  concepts.md  examples.md  index.md  installation.md  mcp.md  privacy_policy.md  security.md  security_policy.md  tee_profile.md  use_cases.md  vision.md
examples/: index.html
installation/: index.html
poc_agents/query_and_log_agent/: Dockerfile  README.md  agent-card.json  pyproject.toml
poc_agents/query_and_log_agent/src/query_and_log_agent/: __init__.py  agent.py  main.py
poc_agents/registry_query_agent/: Dockerfile  INSTRUCTIONS.md  agent-card.json  pyproject.toml
poc_agents/registry_query_agent/src/registry_query_agent/: agent.py  main.py
poc_agents/task_logger_agent/: .gitignore  Dockerfile  README.md  agent-card.json  pyproject.toml
poc_agents/task_logger_agent/src/task_logger_agent/: __init__.py  agent.py  main.py
privacy_policy/: index.html
search/: search_index.json
security/: index.html
security_policy/: index.html
tee_profile/: index.html
use_cases/: index.html
vision/: index.html
(+59 files in other folders)
