# Root pyproject.toml for AgentVault monorepo using Poetry Workspaces

[tool.poetry]
# Minimal definition for workspace root - no package details needed here
name = "agentvault-monorepo-root" # Added a placeholder name to satisfy basic checks if needed by any tool
version = "0.1.0"
description = "Root project for AgentVault ecosystem components (Workspace Definition)."
authors = ["Raphael Zbigniew Jeziorny <AgentVault@proton.me>"]
license = "Apache-2.0"
readme = "README.md"
packages = [] # Explicitly no packages at the root

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
# No direct production dependencies at the root

# --- Root Development Dependencies ---
# Tools used across the workspace for testing, linting, docs, etc.
# These ARE installed into the shared venv by 'poetry install --with dev'
[tool.poetry.group.dev.dependencies]
pytest = ">=7.0,<9.0"
pytest-asyncio = ">=0.23,<0.24" # For testing async code
httpx = ">=0.27,<0.29" # For testing API clients/servers
respx = ">=0.20,<0.21" # For mocking HTTPX requests
freezegun = ">=1.1.0" # For time-based testing
# Documentation
mkdocs = ">=1.5"
mkdocs-material = ">=9.0"
# --- REMOVED Automation script deps ---
# typer = ">=0.9.0"
# pyyaml = ">=6.0"
# jinja2 = ">=3.0"
# --- END REMOVED ---


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# --- Poetry Workspace Configuration ---
# Defines which subdirectories contain managed packages
[tool.poetry.plugins."poetry.plugin"]
workspaces = "poetry_workspaces.plugin:WorkspacesPlugin"

[tool.workspaces]
# List the directories containing packages managed by Poetry
packages = [
    "agentvault_library",
    "agentvault_cli",
    "agentvault_registry",
    "agentvault_server_sdk",
    "agentvault_testing_utils",
]

# --- Optional: PEP 621 Compliant Dev Dependencies ---
# List only the genuinely shared dev tools here as well for broader compatibility
[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9.0",
    "pytest-asyncio>=0.23,<0.24",
    "httpx>=0.27,<0.29",
    "respx>=0.20,<0.21",
    "freezegun>=1.1.0",
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
]
