# Using standard PEP 621 [project] table primarily
[project]
    name = "agentvault-cli"
    version = "0.1.1"
    description = "Command-line client for the AgentVault ecosystem."
    authors = [{ name = "Raphael Zbigniew Jeziorny", email = "AgentVault@proton.me" }]
    license = { text = "Apache-2.0" }
    readme = "README.md"
    requires-python = ">=3.10,<3.12"
    keywords = ["ai", "agent", "a2a", "mcp", "cli", "command-line", "client", "tool", "security", "key-management", "python", "click", "rich", "developer-tools"]
    classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Developers",
        "Intended Audience :: System Administrators",
        "License :: OSI Approved :: Apache Software License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Environment :: Console",
        "Topic :: Utilities",
        "Topic :: Security",
        "Topic :: Communications",
        "Topic :: Scientific/Engineering :: Artificial Intelligence",
    ]

    dependencies = [
        "click>=8.0,<9.0",
        "httpx>=0.27,<0.29",
        "rich>=13.0,<15.0",
        # Specify library dependency for distribution
        "agentvault>=0.2.0,<0.3.0"
    ]

    # Define console scripts using standard syntax
    [project.scripts]
    agentvault_cli = "agentvault_cli.main:cli"

    [project.optional-dependencies]
    dev = [
        "pytest>=8.0,<9.0",
        "pytest-mock>=3.12,<4.0",
    ]

# Build System (unchanged)
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# --- Poetry Specific Configuration (Minimal) ---
[tool.poetry]
version = "0.1.1" # Keep consistent with [project] for poetry commands
packages = [{include = "agentvault_cli", from = "src"}]

# Dependencies defined here are used by Poetry's resolver but [project] is canonical
[tool.poetry.dependencies]
python = ">=3.10,<3.12"
click = ">=8.0,<9.0"
httpx = ">=0.27,<0.29"
rich = ">=13.0,<15.0"
# --- MODIFIED: Removed version constraint here ---
# Only keep path/develop for local editable installs via Poetry
agentvault = {path = "../agentvault_library", develop = true}
# --- END MODIFIED ---


# Dev dependencies defined here are used by Poetry but [project.optional-dependencies] is canonical
[tool.poetry.group.dev.dependencies]
pytest = ">=8.0,<9.0"
pytest-mock = ">=3.12,<4.0"
