# Using standard PEP 621 [project] table primarily
[project]
    name = "agentvault-cli"
    version = "0.1.1"
    description = "Command-line client for the AgentVault ecosystem."
    authors = [{ name = "Raphael Zbigniew Jeziorny", email = "AgentVault@proton.me" }]
    license = { text = "Apache-2.0" }
    readme = "README.md"
    requires-python = ">=3.10,<3.12"
    keywords = ["ai", "agent", "a2a", "mcp", "cli", "command-line", "client", "tool", "security", "key-management", "python", "click", "rich", "developer-tools", "asyncclick"]
    classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Developers",
        "Intended Audience :: System Administrators",
        "License :: OSI Approved :: Apache Software License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Environment :: Console",
        "Topic :: Utilities",
        "Topic :: Security",
        "Topic :: Communications",
        "Topic :: Scientific/Engineering :: Artificial Intelligence",
    ]

    dependencies = [
        "asyncclick>=8.0,<9.0",
        "httpx>=0.26.0,<0.27.0", # Keep downgraded httpx
        "rich>=13.0,<15.0",
        "agentvault>=0.2.0,<0.3.0"
    ]

    [project.scripts]
    # --- MODIFIED: Correct entry point ---
    agentvault_cli = "agentvault_cli.main:cli" # Ensure this points to the asyncclick group
    # --- END MODIFIED ---

    [project.optional-dependencies]
    dev = [
        "pytest>=7.0,<9.0",
        "pytest-mock>=3.12,<4.0",
        # --- MODIFIED: Use pytest-httpx for run command tests ---
        "pytest-httpx>=0.28.0,<0.29.0", # Keep downgraded pytest-httpx
        # --- END MODIFIED ---
        "asyncclick>=8.0,<9.0", # Keep asyncclick for runner in config tests
        # --- ADDED: Testing utils dependency ---
        "agentvault-testing-utils" # Add testing utils here
        # --- END ADDED ---
    ]

# Build System (unchanged)
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# --- Poetry Specific Configuration (Minimal) ---
[tool.poetry]
version = "0.1.1" # Keep consistent with [project] for poetry commands
# --- MODIFIED: Point to src directory ---
packages = [{include = "agentvault_cli", from = "src"}]
# --- END MODIFIED ---

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
asyncclick = ">=8.0,<9.0"
httpx = ">=0.26.0,<0.27.0" # Keep downgraded httpx
rich = ">=13.0,<15.0"
agentvault = {path = "../agentvault_library", develop = true}


[tool.poetry.group.dev.dependencies]
pytest = ">=7.0,<9.0"
pytest-mock = ">=3.12,<4.0"
# --- MODIFIED: Use pytest-httpx for run command tests ---
pytest-httpx = ">=0.28.0,<0.29.0" # Keep downgraded pytest-httpx
# --- END MODIFIED ---
asyncclick = ">=8.0,<9.0" # Keep asyncclick for runner in config tests
# --- ADDED: Testing utils dependency ---
agentvault-testing-utils = {path = "../agentvault_testing_utils", develop = true}
# --- END ADDED ---

# --- ADDED: Script definition for Poetry ---
[tool.poetry.scripts]
agentvault_cli = "agentvault_cli.main:cli"
# --- END ADDED ---
