# Using standard PEP 621 [project] table primarily
[project]
    name = "agentvault"
    # --- VERSION UPDATED ---
    version = "0.2.1"
    # --- VERSION UPDATED ---
    description = "Core Python client library for A2A protocol, MCP, and secure local key management."
    authors = [{ name = "Raphael Zbigniew Jeziorny", email = "AgentVault@proton.me" }]
    license = { text = "Apache-2.0" } # Standard license expression
    readme = "README.md"
    requires-python = ">=3.10,<3.12"
    keywords = ["ai", "agent", "a2a", "mcp", "security", "api", "llm", "interoperability", "key-management", "python", "library", "client", "sdk"]
    classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: Apache Software License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Topic :: Security",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Communications",
        "Topic :: Scientific/Engineering :: Artificial Intelligence",
        "Typing :: Typed",
    ]

    # Core Dependencies defined directly
    dependencies = [
        "httpx[http2,brotli]>=0.27,<0.28",
        "pydantic>=2.0,<3.0",
        "python-dotenv>=1.0,<2.0",
        # keyring is optional
    ]

    # Optional dependencies defined using standard syntax
    [project.optional-dependencies]
    os_keyring = ["keyring>=24,<25"]
    dev = [
        "pytest>=7.0,<9.0",
        "pytest-asyncio>=0.23,<0.24",
        "pytest-mock>=3.12,<4.0",
        "respx>=0.20,<0.21",
        "agentvault-testing-utils" # Version/path handled by Poetry below
    ]

# Build System (unchanged)
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Poetry Specific Configuration (Minimal - Only what's needed beyond [project])
[tool.poetry]
# --- VERSION UPDATED ---
version = "0.2.1" # Keep consistent with [project] for poetry commands
# --- VERSION UPDATED ---
# name, description, authors, license, readme are now primarily in [project]
packages = [{include = "agentvault", from = "src"}]

# Dependencies defined here are used by Poetry's resolver but [project] is canonical
[tool.poetry.dependencies]
python = ">=3.10,<3.12"
httpx = {version = ">=0.27,<0.28", extras = ["http2", "brotli"]}
pydantic = ">=2.0,<3.0"
python-dotenv = ">=1.0,<2.0"
keyring = {version = ">=24,<25", optional = true}

# Extras defined here are used by Poetry but [project.optional-dependencies] is canonical
[tool.poetry.extras]
os_keyring = ["keyring"]

# Dev dependencies defined here are used by Poetry but [project.optional-dependencies] is canonical
[tool.poetry.group.dev.dependencies]
pytest = ">=7.0,<9.0"
pytest-asyncio = ">=0.23,<0.24"
pytest-mock = ">=3.12,<4.0"
respx = ">=0.20,<0.21"
agentvault-testing-utils = {path = "../agentvault_testing_utils", develop = true}
