# agentvault_library/pyproject.toml
# Using standard PEP 621 [project] table primarily
[project]
    name = "agentvault"
    # --- USE THE VERSION FROM THE LOCK FILE ---
    version = "0.2.1"
    # --- END ---
    description = "Core Python client library for A2A protocol, MCP, and secure local key management."
    authors = [{ name = "Raphael Zbigniew Jeziorny", email = "AgentVault@proton.me" }]
    license = { text = "Apache-2.0" }
    readme = "README.md" # Add README.md if it doesn't exist
    # --- ENSURE THIS CONSTRAINT IS PRESENT AND CORRECT ---
    requires-python = ">=3.10,<3.12"
    # --- END ---
    keywords = ["ai", "agent", "a2a", "mcp", "security", "api", "llm", "interoperability", "key-management", "python", "library", "client", "sdk"]
    classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: Apache Software License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Topic :: Security",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Communications",
        "Topic :: Scientific/Engineering :: Artificial Intelligence",
        "Typing :: Typed",
    ]
    dependencies = [
        # --- KEEP CONSISTENT WITH ROOT LOCK (0.26.* for now) ---
        "httpx[http2,brotli]>=0.26.0,<0.27.0", # Keep this for now, poetry lock will manage final
        # --- END ---
        "pydantic>=2.0,<3.0",
        "python-dotenv>=1.0,<2.0",
    ]
    [project.optional-dependencies]
    os_keyring = ["keyring>=24,<25"]
    dev = [
        "pytest>=7.0,<9.0",
        "pytest-asyncio>=0.23,<0.24",
        "pytest-mock>=3.12,<4.0",
        "respx>=0.20,<0.21",
    ]
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "agentvault"
# --- USE THE VERSION FROM THE LOCK FILE ---
version = "0.2.1"
# --- END ---
description = ""
authors = ["Raphael Zbigniew Jeziorny <AgentVault@proton.me>"]
packages = [{include = "agentvault", from = "src"}]
# --- ENSURE THIS CONSTRAINT IS PRESENT AND CORRECT ---
[tool.poetry.dependencies]
python = ">=3.10,<3.12"
# --- END ---
# --- KEEP CONSISTENT WITH ROOT LOCK ---
httpx = {version = ">=0.26.0,<0.27.0", extras = ["http2", "brotli"]}
# --- END ---
pydantic = ">=2.0,<3.0"
python-dotenv = ">=1.0,<2.0"
keyring = {version = ">=24,<25", optional = true}
[tool.poetry.extras]
os_keyring = ["keyring"]
[tool.poetry.group.dev.dependencies]
pytest = ">=7.0,<9.0"
pytest-asyncio = ">=0.23,<0.24"
pytest-mock = ">=3.12,<4.0"
respx = ">=0.20,<0.21"
