# Using standard PEP 621 [project] table primarily
[project]
    name = "agentvault-registry-api"
    version = "0.1.0"
    description = "Backend API for the AgentVault Central Registry"
    authors = [{ name = "Raphael Zbigniew Jeziorny", email = "AgentVault@proton.me" }]
    license = { text = "Apache-2.0" }
    readme = "README.md"
    requires-python = ">=3.10,<3.12"

    # Define ALL dependencies here for pip/build tools
    dependencies = [
        "fastapi>=0.111,<0.112",
        # Include extras directly for uvicorn here
        "uvicorn[standard]>=0.29,<0.35",
        "sqlalchemy>=2.0,<2.1",
        "asyncpg>=0.29,<0.30",
        "alembic>=1.13,<1.14",
        "pydantic>=2.0,<3.0",
        "pydantic-settings>=2.0,<2.4",
        # Include extras directly for passlib here
        "passlib[bcrypt]>=1.7,<1.8",
        "python-dotenv>=1.0,<2.0",
        "slowapi>=0.1.9,<0.2.0",
        "psycopg2-binary (>=2.9.10,<3.0.0)",
    ]

    # Define dev dependencies here
    [project.optional-dependencies]
    dev = [
        "pytest>=7.0,<9.0",
        "pytest-asyncio>=0.23,<0.24",
        "httpx>=0.27,<0.29",
    ]

# Build System (unchanged)
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# --- Poetry Specific Configuration (MINIMAL) ---
# Keep only what's absolutely necessary for Poetry's build backend
# or specific commands if they rely solely on this section.
[tool.poetry]
name = "agentvault-registry-api" # Keep consistent
version = "0.1.0" # Keep consistent
description = "" # Can be empty if defined in [project]
authors = ["Raphael Zbiniew Jeziorny <AgentVault@proton.me>"] # Keep consistent
packages = [{include = "agentvault_registry", from = "src"}] # Essential for finding the package

# --- REMOVED Redundant Poetry Dependency Sections ---
# [tool.poetry.dependencies]
# python = ">=3.10,<3.12"
# fastapi = ">=0.111,<0.112"
# uvicorn = {extras = ["standard"], version = ">=0.29,<0.35"}
# sqlalchemy = ">=2.0,<2.1"
# asyncpg = ">=0.29,<0.30"
# alembic = ">=1.13,<1.14"
# pydantic = ">=2.0,<3.0"
# pydantic-settings = ">=2.0,<2.4"
# passlib = {extras = ["bcrypt"], version = ">=1.7,<1.8"}
# python-dotenv = ">=1.0,<2.0"
# slowapi = ">=0.1.9,<0.2.0"

# [tool.poetry.group.dev.dependencies]
# pytest = ">=7.0,<9.0"
# pytest-asyncio = ">=0.23,<0.24"
# httpx = ">=0.27,<0.29"
