[tool.poetry]
name = "agentvault-server-sdk"
version = "0.1.0"
description = "Server SDK for building AgentVault A2A compliant agents."
authors = ["Raphael Zbigniew Jeziorny <AgentVault@proton.me>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "agentvault_server_sdk", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = ">=0.111,<0.112"
agentvault = {path = "../agentvault_library", develop = true}
# --- ADDED: Typer dependency ---
typer = ">=0.9.0" # Using >=0.9 for richer features like rich integration if needed later
# --- END ADDED ---


[tool.poetry.group.dev.dependencies]
pytest = ">=7.0,<9.0"
pytest-asyncio = ">=0.23,<0.24"
freezegun = ">=1.1.0"

# --- ADDED: Script entry point ---
[tool.poetry.scripts]
agentvault-sdk = "agentvault_server_sdk.packager.cli:app"
# --- END ADDED ---

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# --- ADDED: Project table for scripts ---
# Using standard PEP 621 [project] table primarily
[project]
    name = "agentvault-server-sdk" # Duplicated from tool.poetry for standard compliance
    version = "0.1.0" # Duplicated
    description = "Server SDK for building AgentVault A2A compliant agents." # Duplicated
    authors = [{ name = "Raphael Zbigniew Jeziorny", email = "AgentVault@proton.me" }] # Duplicated
    license = { text = "Apache-2.0" } # Duplicated
    readme = "README.md" # Duplicated
    requires-python = ">=3.10,<3.12" # Duplicated
    dependencies = [ # Duplicated from tool.poetry.dependencies
        "fastapi>=0.111,<0.112",
        "typer>=0.9.0",
        # Reference to agentvault library handled by poetry path dependency / install process
    ]
    # Define console scripts using standard syntax
    [project.scripts]
    agentvault-sdk = "agentvault_server_sdk.packager.cli:app"
# --- END ADDED ---
