[tool.poetry]
name = "agentvault-server-sdk"
version = "0.1.1"
description = "Server SDK for building AgentVault A2A compliant agents."
authors = ["Raphael Zbigniew Jeziorny <AgentVault@proton.me>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "agentvault_server_sdk", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = ">=0.111,<0.112"
# --- MODIFIED: Removed version constraint here ---
agentvault = {path = "../agentvault_library", develop = true}
# --- END MODIFIED ---
typer = ">=0.9.0"


[tool.poetry.group.dev.dependencies]
pytest = ">=7.0,<9.0"
pytest-asyncio = ">=0.23,<0.24"
freezegun = ">=1.1.0"

[tool.poetry.scripts]
agentvault-sdk = "agentvault_server_sdk.packager.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Using standard PEP 621 [project] table primarily
[project]
    name = "agentvault-server-sdk"
    version = "0.1.1"
    description = "Server SDK for building AgentVault A2A compliant agents."
    authors = [{ name = "Raphael Zbigniew Jeziorny", email = "AgentVault@proton.me" }]
    license = { text = "Apache-2.0" }
    readme = "README.md"
    requires-python = ">=3.10,<3.12"
    dependencies = [
        "fastapi>=0.111,<0.112",
        "typer>=0.9.0",
        # Specify library dependency for distribution
        "agentvault>=0.2.0,<0.3.0"
    ]
    # Define console scripts using standard syntax
    [project.scripts]
    agentvault-sdk = "agentvault_server_sdk.packager.cli:app"

    [project.optional-dependencies]
    dev = [
        "pytest>=7.0,<9.0",
        "pytest-asyncio>=0.23,<0.24",
        "freezegun>=1.1.0",
    ]
