[tool.poetry]
name = "registry_query_agent" # Use the package name
version = "0.1.0"
description = "Accepts a search term and queries the AgentVault Registry API." # Use the agent description
authors = ["Raphael Jeziorny <AgentVault@proton.me>"] # Use your details
license = "Apache-2.0" # Or your preferred license
readme = "README.md" # Assuming a README might be added later
packages = [{include = "registry_query_agent", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12" # Keep this strict range
fastapi = ">=0.111,<0.112"
uvicorn = {extras = ["standard"], version = ">=0.29,<0.35"}
agentvault-server-sdk = ">=0.1.0,<0.2.0" # Match the SDK version requirement
# --- MODIFIED: Relax httpx constraint - let SDK/Library dictate ---
httpx = "*" # Or use a range compatible with the library, e.g., ">=0.27,<0.28"
# --- END MODIFIED ---

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0,<9.0"
pytest-asyncio = ">=0.23,<0.24"
# Add httpx here too if you plan to write tests that mock the registry call
# httpx = ">=0.27,<0.28" # Match the library's range if adding here

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
