[tool.poetry]
name = "task_logger_agent"
version = "0.1.0"
description = "An agent that logs messages to a PostgreSQL database with timestamps."
authors = ["Raphael Jeziorny <AgentVault@proton.me>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "task_logger_agent", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = ">=0.111,<0.112"
uvicorn = {extras = ["standard"], version = ">=0.29,<0.35"}
agentvault-server-sdk = ">=0.1.0,<0.2.0"
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0,<9.0"
pytest-asyncio = ">=0.23,<0.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
